refactor(data): migrate managers to AbstractPersistentDataManager
- Extract shared I/O boilerplate (load, save, atomic write, lock) into AbstractPersistentDataManager.
- Migrate PersistentValuesManager and PetCacheManager to the new base class.
- Add EquipmentCacheManager with dirty checking to skip unnecessary disk writes.
- Move equipment cache out of PersistentValues into its own manager and file.
- Standardize persistent data access to getData() across the codebase.
- Add dirty checking in ScreenListener to skip unnecessary pet cache saves.
- Replace String.format() with .formatted() where applicable.
- Fix CompressedStorage: <= 2 guard, constructor delegation, null/empty check in setStorage().